--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <a class="imglogo" href="index.html"><img src="Assets/Logo.jpg"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
         </div>
-        <div class="titre">Truckmuche</div>
+        <div class="titre">Tsruckmuche</div>
         <ul>
             <li><a href="Présentation.html">Notre Entreprise</a></li>
             <li><a href="Localisation.html">Localisation</a></li>   
