--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,21 @@
         
         </nav>    
     </header>    
-
+    <body>
+        <h5>Nous contacter</h5>
+        <section id="contact">
+            <h5>Nous contacter:</h5>
+              <form id="contactform">
+                <label for="name">Name:</label><br>
+               <input type="text" id="name" name="name" value=Léna><br>
+               <label for="email">Email:</label><br>
+               <input type="email" id="email" name="email" value="Léna@email.com"><br>
+               <label for="message">Message:</label><br>
+               <textarea id="message" name="message"></textarea>
+               <br><br>
+               <input type="submit" value="Submit">
+              </form>
+    </body>
     <footer>
         <h3>Suivez nous sur nos réseaux sociaux !! :)</h3>
         <div name="footer">
