--- a/Contact.html
+++ b/Contact.html
@@ -18,9 +18,9 @@
         <!--<img class="imglogo" src="Assets/Logo.jpg" alt="Bonjour, ceçi est un logo magnifique crée par Léna" >-->
 
         <div class="logoClass">
-            <a class="imglogo" href="index.html"><img src="Assets/Logo.jpg"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
+            <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
         </div>
-        
+        <div><a class="titre" href="index.html"> Truckmuche</a></div>   
         <ul>
             <li><a href="Présentation.html">Notre Entreprise</a></li>
             <li><a href="Localisation.html">Localisation</a></li> 
