ajout de la carte et du css pour le planning

--- a/Localisation.html
+++ b/Localisation.html
@@ -18,7 +18,7 @@
         <!--<img class="imglogo" src="Assets/Logo.jpg" alt="Bonjour, ceçi est un logo magnifique crée par Léna" >-->
 
         <div class="logoClass">
-            <a class="imglogo" href="index.html"><img src="Assets/Logo.jpg"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
+            <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo" alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
         </div>
         
         <ul>
@@ -34,8 +34,8 @@
 
     </br>
     <div name="localisationTab" id="localisationTab">
+        <h1>Ou nous trouver :</h1>
         <table>
-            <caption>Ou nous trouver :</caption>
                 <tr>
                     <th></th>
                     <th>Lundi</th>
@@ -56,11 +56,11 @@
                 </tr>
                 <tr>
                     <th>Adresse</th>
-                    <td>9 rue des Olivettes</td>
-                    <td>2 rue Lamoricière</td>
+                    <td>9 Rue des Olivettes</td>
+                    <td>2 Rue Lamoricière</td>
                     <td>4 Avenue louise Michel</td>
-                    <td>13 impasse des Hibiscus</td>
-                    <td>115 avenue jacques Cartier</td>
+                    <td>13 Impasse des Hibiscus</td>
+                    <td>115 Avenue jacques Cartier</td>
                     <td>37 Boulevard de la prairie au duc</td>
                 </tr>
                 <tr>
@@ -75,7 +75,10 @@
         </table>
     </div>
     <p>Repos le dimanche !</p> 
+    </br>
 
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-1.6052913691964934%2C47.19289144244533%2C-1.494913103815634%2C47.23172149567537&amp;layer=mapnik&amp;marker=47.21231002287487%2C-1.5501022365060635" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=47.2123&amp;mlon=-1.5501#map=14/47.2123/-1.5501">Afficher une carte plus grande</a></small>
+    </br></br></br>
     <footer>
         <h3>Suivez nous sur nos réseaux sociaux !! :)</h3>
         <div name="footer">
