--- a/Contact.html
+++ b/Contact.html
@@ -34,19 +34,24 @@
         </nav>    
     </header>    
     <body>
-        <h5>Nous contacter</h5>
         <section id="contact">
-            <h5>Nous contacter:</h5>
-              <form id="contactform">
+            <h5>Une suggestion, une remarque? Contactez-nous ici ! :)</h5>
+              <form name = "contactform" id="contactform" method="POST">
                 <label for="name">Name:</label><br>
-               <input type="text" id="name" name="name" value=Léna><br>
+               <input type="text" id="name" name="name" placeholder=Léna><br>
                <label for="email">Email:</label><br>
-               <input type="email" id="email" name="email" value="Léna@email.com"><br>
+               <input type="email" id="email" name="email" placeholder="Léna@email.com"><br>
                <label for="message">Message:</label><br>
                <textarea id="message" name="message"></textarea>
                <br><br>
                <input type="submit" value="Submit">
               </form>
+
+              <p>Voici nos coordonées: </br>
+                Notre adresse mail:   CookiesTruck@gmail.com</br>
+                Numéro de téléphone:  021011121314</br>
+              </p>
+        </section>
     </body>
     <footer>
         <h3>Suivez nous sur nos réseaux sociaux !! :)</h3>
