--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
         <div class="logoClass">
             <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
         </div>
-        <div><a class="titre" href="index.html"> Truckmuche</a></div>   
+        <div><a class="titre" href="index.html"> Nous contacter</a></div>   
         <ul>
             <li><a href="Présentation.html">Notre Entreprise</a></li>
             <li><a href="Localisation.html">Localisation</a></li> 
