--- a/Contact.html
+++ b/Contact.html
@@ -15,10 +15,10 @@
         <body> 
             <header>
                 <nav>
-                <!--<img class="imglogo" src="Assets/Logo.jpg" alt="Bonjour, ceçi est un logo magnifique crée par Léna" >-->
+                <!--<img class="imglogo" src="Assets/Logo.jpg" alt="Bonjour, ceci est un logo magnifique crée par Léna" >-->
 
                 <div class="logoClass">
-                    <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo"  alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
+                    <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo"  alt="Bonjour, ceci est un logo magnifique crée par Léna"></a>
                 </div>
 
                 <div>
