--- a/Présentation.html
+++ b/Présentation.html
@@ -42,20 +42,26 @@
     <main>
         <section>
             <h1>Mon histoire</h1>
-            <p>
+            <div id="presentationText">
+                <p >
                     « Vers 40 ans, j’ai connu une période difficile suite à un burn-out. Mon boulot de commercial m'avait usé. 
 J'ai toujours un goût pour la pâtisserie et j'ai profité de cette période de remise en question pour me poser les bonnes questions.
 L’ADIE (Association pour le Droit à l’Initiative Économique) 
 m’a aidé à réfléchir à mon projet et m’a suggéré de venir frapper à la porte de la Fondation de la 2ème Chance. 
-Grâce au soutien de mon parrain et beaucoup de persévérance, j'ai réussi à lancer TruckMuche, le Food Truck qui rend heureux.
+Grâce au soutien de mon parrain et beaucoup de persévérance, j'ai réussi à lancer TruckMuche, le Food Truck qui rend heureux.</br>
 
 Il fallait que ce soit gourmand et facile à transporter.
 Je voulais voir des étoiles dans les yeux et des sourires malicieux d'adultes en pleine régression avec mes biscuits. 
 Les gâteaux de voyages, j'aime le mot, j'aime le concept. J'ai alors développé des recettes gourmandes, fraîches, faciles à dévorer. 
 Bien sûr c'est du fait maison sans cochonneries dedans. 
 Du goût et du bonheur.
-            </p>
+                </p>
+            </div>
+            </section>
         </section>
+        </br>
+        <h4>Marc vous servira toujours avec le sourire :</h4>
+        <img class="marcPicture" src="Assets/portrait marc.jpg" alt ="portrait de marc le proprio">
     </main>
 
     <footer>
