Change Css for style and presentation more responsive

--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div>
-                    <a class="titre" href="index.html"> Truckmuche</a>
+                    <a class="titre" href="index.html">Truckmuche</a>
                 </div> 
 
                 <ul>
@@ -37,7 +37,7 @@
             </header>  
         
             <section id="contact">
-                <h5>Une suggestion, une remarque? Contactez-nous ici ! :)</h5>
+                <h1>Une suggestion, une remarque? Contactez-nous ici ! :)</h1>
 
                 <form name = "contactform" id="contactform" method="POST">
                     <label for="name">Name:</label><br>
@@ -48,7 +48,7 @@
                 <textarea id="message" name="message"></textarea>
                 <br><br>
                 <input type="submit" value="Submit">
-                </form>
+                </form><br><br><br><br><br><br>
 
                 <p>Voici nos coordonées: </br>
                 Notre adresse mail:   CookiesTruck@gmail.com</br>
