--- a/Présentation.html
+++ b/Présentation.html
@@ -23,7 +23,7 @@
                 <div class="logoClass">
                     <a  href="index.html"><img src="Assets/Logo.jpg" class="imglogo" alt="Bonjour, ceçi est un logo magnifique crée par Léna"></a>
                 </div>
-                <div><a class="titre" href="index.html"> Truckmuche</a></div>
+                <div><a class="titre" href="index.html">Truckmuche</a></div>
                     <ul>
                         <li><a href="Présentation.html">Notre Entreprise</a></li>
                         <li><a href="Localisation.html">Localisation</a></li>   
@@ -33,12 +33,12 @@
             </nav>        
         </header>  
     
-        <div id="Présentation"> 
+        <div class="Présentation"> 
             <img class="imgfoodtruck" src="Assets/truckmuche-foodtruck.jpg" alt="Ceçi est la photo du magnifique foodtruck">
             <p></p>
     </div>
     
-    <main>
+    <main class = "Marctext">
         <section>
             <h1>Mon histoire</h1>
             <div id="presentationText">
