--- a/Présentation.html
+++ b/Présentation.html
@@ -75,7 +75,7 @@ Du goût et du bonheur.
             </div>
 
             <div>               
-                <a class="facebook" href="https://www.facebook.com/TruckMuche.fr"><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="facebook" href="https://www.facebook.com/TruckMuche.fr"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
                 <a class="insta" href="https://www.Instagram.com/TruckMuche.fr"><img src="Assets/instaIcon.jpg" alt="Liens vers notre instagram" name="logoInsta"></a>                        
             </div>
             <div class="Endpage">
