--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <div>               
 
-                    <a class="facebook" href="https://www.facebook.com/people/Marc-Much/100073361378103/"><i class="fa-brands fa-facebook" alt="lien vers notre facebook"></i></a>
+                    <a class="facebook" href="https://www.facebook.com/TruckMuche.fr"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
                     <a class="insta" href="https://www.instagram.com/marc.truckmuche/"><img src="Assets/instaIcon.jpg" alt="Liens vers notre instagram" name="logoInsta"></a>                        
 
                 </div>
