--- a/Localisation.html
+++ b/Localisation.html
@@ -79,9 +79,9 @@
         <footer>
             <div name="footer">
 
-                <h3>Suivez nous sur nos réseaux sociaux !! :)</h3>
+                <h2>Suivez nous sur nos réseaux sociaux !! :)</h2>
                     <div>               
-                        <a class="facebook" href="https://www.facebook.com/TruckMuche.fr"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
+                        <a class="facebook" href="https://www.facebook.com/profile.php?id=100073361378103"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
                         <a class="insta" href="https://www.Instagram.com/TruckMuche.fr"><img src="Assets/instaIcon.jpg" alt="Liens vers notre instagram" name="logoInsta"></a>                        
                     </div>
 
