--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <div>               
 
-                    <a class="facebook" href="https://www.facebook.com/TruckMuche.fr"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
+                    <a class="facebook" href="https://www.facebook.com/profile.php?id=100073361378103"><img src="Assets/logo-fb.png" alt="Liens vers notre facebook" name="logoFb"></a>
                     <a class="insta" href="https://www.instagram.com/marc.truckmuche/"><img src="Assets/instaIcon.jpg" alt="Liens vers notre instagram" name="logoInsta"></a>                        
 
                 </div>
