--- a/Localisation.html
+++ b/Localisation.html
@@ -36,7 +36,7 @@
 
 
         <div name="localisationTab" id="localisationTab">
-            <h1>Ou nous trouver :</h1>
+            <h1>Où et quand nous trouver?</h1>
                 <table>
                     <tr>
                         <th>Lundi</th>
@@ -74,7 +74,7 @@
         </div>
 
         <h4>Repos le dimanche !</h4></br>
-        <h4>Ou nous trouver Aujourd'hui :</h4>
+        <h4>Où nous trouver Aujourd'hui?</h4>
         <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-1.6642999649047854%2C47.211610192642475%2C-1.6076517105102541%2C47.23731609118278&amp;layer=mapnik&amp;marker=47.224464700062356%2C-1.6359758377075195" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=47.2245&amp;mlon=-1.6360#map=15/47.2245/-1.6360">Afficher une carte plus grande</a></small>        
         <footer>
             <div name="footer">
@@ -87,10 +87,10 @@
 
                     <div class="Endpage">
                         <ul class="links">
-                            <li><a href="index.html">Truckmuche</a></li>
-                            <li><a href="Présentation.html">Notre Entreprise</a></li>
-                            <li><a href="Localisation.html">Localisation</a></li>
-                            <li><a href="Contact.html">Nous contacter</a></li>
+                            <li><a class="link" href="index.html">Truckmuche</a></li>
+                            <li><a class="link" href="Présentation.html">Notre Entreprise</a></li>
+                            <li><a class="link" href="Localisation.html">Localisation</a></li>
+                            <li><a class="link" href="Contact.html">Nous contacter</a></li>
                         </ul>
                         <!--footer bottom ul ends here-->
                         <p class="text-center">Copyright @2021 | Designed with by <a href="index.html">Truckmuche</a></p>
